kubernetes/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mysql
  template:
    metadata:
      labels:
        component: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_PASSWORD
                  name: secret-mysql-password
          image: mysql:5.7.27
          name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
              subPath: marmoset
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: persistent-volume-claim
