kubernetes/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-server
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - env:
            - name: MYSQL_HOST
              value: service-cluster-ip-mysql
            - name: MYSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: MYSQL_PASSWORD
                  name: secret-mysql-password
            - name: MYSQL_USERNAME
              value: root
          image: arikama/marmoset-server
          name: server
          ports:
            - containerPort: 80
