kubernetes/service-cluster-ip-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-client
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    component: client
  type: ClusterIP
