kubernetes/service-cluster-ip-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-server
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: server
  type: ClusterIP
