kubernetes/service-cluster-ip-webscraper.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cluster-ip-webscraper
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    component: webscraper
  type: ClusterIP
