kubernetes/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-nginx
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: service-cluster-ip-client
              servicePort: 3000
            path: /?(.*)
    - http:
        paths:
          - backend:
              serviceName: service-cluster-ip-server
              servicePort: 80
            path: /api/?(.*)
